pstalgo: Work in progress on isovist tool and buffering polygons

--- a/pstalgo/vc/pstalgo.vcxproj
+++ b/pstalgo/vc/pstalgo.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="..\include\pstalgo\analyses\AttractionDistance.h" />
     <ClInclude Include="..\include\pstalgo\analyses\AttractionReach.h" />
     <ClInclude Include="..\include\pstalgo\analyses\Common.h" />
+    <ClInclude Include="..\include\pstalgo\analyses\CreateBufferPolygons.h" />
     <ClInclude Include="..\include\pstalgo\analyses\CreateGraph.h" />
     <ClInclude Include="..\include\pstalgo\analyses\CalculateIsovists.h" />
     <ClInclude Include="..\include\pstalgo\analyses\CreateJunctions.h" />
@@ -34,6 +35,7 @@
     <ClInclude Include="..\include\pstalgo\analyses\SegmentBetweenness.h" />
     <ClInclude Include="..\include\pstalgo\analyses\SegmentGrouping.h" />
     <ClInclude Include="..\include\pstalgo\analyses\SegmentGroupIntegration.h" />
+    <ClInclude Include="..\include\pstalgo\analyses\VisualConnectivity.h" />
     <ClInclude Include="..\include\pstalgo\BFS.h" />
     <ClInclude Include="..\include\pstalgo\Debug.h" />
     <ClInclude Include="..\include\pstalgo\experimental\ArrayView.h" />
@@ -52,6 +54,8 @@
     <ClInclude Include="..\include\pstalgo\geometry\Polygon.h" />
     <ClInclude Include="..\include\pstalgo\geometry\Rect.h" />
     <ClInclude Include="..\include\pstalgo\geometry\RegionPoints.h" />
+    <ClInclude Include="..\include\pstalgo\geometry\SignedDistanceField.h" />
+    <ClInclude Include="..\include\pstalgo\gfx\Blur.h" />
     <ClInclude Include="..\include\pstalgo\graph\AxialGraph.h" />
     <ClInclude Include="..\include\pstalgo\graph\BFSTraversal.h" />
     <ClInclude Include="..\include\pstalgo\graph\GraphColoring.h" />
@@ -60,18 +64,24 @@
     <ClInclude Include="..\include\pstalgo\graph\SimpleGraph.h" />
     <ClInclude Include="..\include\pstalgo\Limits.h" />
     <ClInclude Include="..\include\pstalgo\maths.h" />
+    <ClInclude Include="..\include\pstalgo\math\Gaussian.h" />
+    <ClInclude Include="..\include\pstalgo\math\Integral.h" />
     <ClInclude Include="..\include\pstalgo\pstalgo.h" />
+    <ClInclude Include="..\include\pstalgo\Raster.h" />
     <ClInclude Include="..\include\pstalgo\system\System.h" />
     <ClInclude Include="..\include\pstalgo\test\CallbackTest.h" />
     <ClInclude Include="..\include\pstalgo\Types.h" />
+    <ClInclude Include="..\include\pstalgo\utils\Arr2d.h" />
     <ClInclude Include="..\include\pstalgo\utils\Bit.h" />
     <ClInclude Include="..\include\pstalgo\utils\BitVector.h" />
+    <ClInclude Include="..\include\pstalgo\utils\Concurrency.h" />
     <ClInclude Include="..\include\pstalgo\utils\DebugUtils.h" />
     <ClInclude Include="..\include\pstalgo\utils\DiscretePrioQueue.h" />
     <ClInclude Include="..\include\pstalgo\utils\Macros.h" />
     <ClInclude Include="..\include\pstalgo\utils\Perf.h" />
     <ClInclude Include="..\include\pstalgo\utils\RefHeap.h" />
     <ClInclude Include="..\include\pstalgo\utils\SimpleAlignedAllocator.h" />
+    <ClInclude Include="..\include\pstalgo\utils\Span.h" />
     <ClInclude Include="..\include\pstalgo\Vec2.h" />
     <ClInclude Include="..\src\analyses\AngularChoiceAlgo.h" />
     <ClInclude Include="..\src\Platform.h" />
@@ -87,6 +97,7 @@
     <ClCompile Include="..\src\analyses\AttractionReach.cpp" />
     <ClCompile Include="..\src\analyses\CalculateIsovists.cpp" />
     <ClCompile Include="..\src\analyses\Common.cpp" />
+    <ClCompile Include="..\src\analyses\CreateBufferPolygons.cpp" />
     <ClCompile Include="..\src\analyses\CreateGraph.cpp" />
     <ClCompile Include="..\src\analyses\CreateJunctions.cpp" />
     <ClCompile Include="..\src\analyses\CreateSegmentMap.cpp" />
@@ -96,6 +107,7 @@
     <ClCompile Include="..\src\analyses\SegmentBetweenness.cpp" />
     <ClCompile Include="..\src\analyses\SegmentGrouping.cpp" />
     <ClCompile Include="..\src\analyses\SegmentGroupIntegration.cpp" />
+    <ClCompile Include="..\src\analyses\VisualConnectivity.cpp" />
     <ClCompile Include="..\src\BFS.cpp" />
     <ClCompile Include="..\src\Debug.cpp" />
     <ClCompile Include="..\src\experimental\DirectedMultiDistanceGraph.cpp" />
@@ -108,15 +120,19 @@
     <ClCompile Include="..\src\geometry\IsovistCalculator.cpp" />
     <ClCompile Include="..\src\geometry\Polygon.cpp" />
     <ClCompile Include="..\src\geometry\RegionPoints.cpp" />
+    <ClCompile Include="..\src\geometry\SignedDistanceField.cpp" />
+    <ClCompile Include="..\src\gfx\Blur.cpp" />
     <ClCompile Include="..\src\graph\AxialGraph.cpp" />
     <ClCompile Include="..\src\graph\GraphColoring.cpp" />
     <ClCompile Include="..\src\graph\SegmentGraph.cpp" />
     <ClCompile Include="..\src\graph\SegmentGroupGraph.cpp" />
     <ClCompile Include="..\src\graph\SimpleGraph.cpp" />
     <ClCompile Include="..\src\Limits.cpp" />
+    <ClCompile Include="..\src\math\Gaussian.cpp" />
     <ClCompile Include="..\src\Platform.cpp" />
     <ClCompile Include="..\src\ProgressUtil.cpp" />
     <ClCompile Include="..\src\PSTA.cpp" />
+    <ClCompile Include="..\src\Raster.cpp" />
     <ClCompile Include="..\src\system\System.cpp" />
     <ClCompile Include="..\src\test\CallbackTest.cpp" />
     <ClCompile Include="..\src\utils\SimpleAlignedAllocator.cpp" />
