--- a/pstalgo/vc/pstalgo.vcxproj.filters
+++ b/pstalgo/vc/pstalgo.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClInclude Include="..\include\pstalgo\analyses\RasterToPolygons.h">
       <Filter>include\pstalgo\analyses</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\pstalgo\Error.h">
+      <Filter>include\pstalgo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\analyses\AngularChoice.cpp">
